# sliderule

./: .gitignore  CMakeLists.txt  README.md
src/: Application.vala  Main.vala
src/Math/: BigInteger.vala  BigRational.vala  BigUnsigned.vala  MathError.vala  Util.vala
